--- a/hermes/crates/cbork/cddl-parser/Cargo.toml
+++ b/hermes/crates/cbork/cddl-parser/Cargo.toml
@@ -4,7 +4,7 @@
 name = "cddl-parser"
 version = "0.1.0"
 edition.workspace = true
-license = "MIT OR Apache-2.0"
+license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
