--- a/hermes/crates/cbork/abnf-parser/Cargo.toml
+++ b/hermes/crates/cbork/abnf-parser/Cargo.toml
@@ -15,3 +15,4 @@ workspace = true
 derive_more =  "0.99.17"
 pest = { version = "2.7.2", features = ["std", "pretty-print", "memchr", "const_prec_climber"] }
 pest_derive = { version = "2.7.2", features = ["grammar-extras"] }
+thiserror = "1.0.56"
