feat: Hermes IPFS loading VFS (#316)
* fix: update dependencies

* feat: add unpin function to WIT

* cleanup of pinning-related code

* feat: add hermes_ipfs::IpfsBuilder type

* wrapper around Ipfs builder
* add 'disable_tls' method
* add 'set_disk_storage' method

* fix(bug): disable TLS and QUIC from HermesIpfs transport

* A bug that prevents the node from starting that will be solved in future
versions of the rust-ipfs crate.

* feat: add HermesIpfs::list_pins

* add example/hermes-ipfs-cli.rs example

* fix: refactor hermes_ipfs crate to simplify downstream types

* fix: add missing dev dependencies

* feat: add fn for listing pinned files

* feat(wip): add crate::ipfs module

* feat(wip): refactor task and api into crate::ipfs

* feat(wip): bootstrap IPFS node into Hermes top-level

* fix: decouple IPFS node from HermesApp

* feat: use HermesIpfsNode::bootstrap to instantiate HERMES_IPFS

* rename HERMES_IPFS_STATE to HERMES_IPFS
* Add HermeIpfsNode::bootstrap with IpfsBuilder as arg
* Bootstrap HERMES_IPFS

* feat: add path to ipfs in VFS

* feat(wip): add crate::vfs::ipfs module

* feat: add IpfsVirtualFile type, impl std::io traits

* chore: update project dictionary and cleanup dependencies

* fix: add boostrap_ipfs function, replace Lazy with OnceCell and update code

* fix: initialize IPFS in wasm integration tests

* fix: format

* fix: spelling

* fix: log when IPFS node is bootstrapped in cli

Currently WASM integration tests break if strings logged with INFO
level don't end in 'test' or 'bench'

* fix: disable logging to stdout in wasm integration tests

IPFS node generates a lot of logs which are difficult to disable

* fix: set 'ipfs' path at root of VFS

---------

Co-authored-by: Alex Pozhylenkov <leshiy12345678@gmail.com>

--- a/hermes/crates/hermes-ipfs/Cargo.toml
+++ b/hermes/crates/hermes-ipfs/Cargo.toml
@@ -14,12 +14,14 @@ workspace = true
 anyhow.workspace = true
 derive_more.workspace = true
 libipld.workspace = true
-libp2p.workspace = true
 rust-ipfs.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 # Dependencies used by examples
 clap = { workspace = true, features = ["derive"] }
-tokio.workspace = true
-tracing-subscriber.workspace = true
+dirs.workspace = true
+lipsum.workspace = true
+rand.workspace = true
 rustyline-async.workspace = true
+tracing-subscriber.workspace = true
