--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -52,6 +52,11 @@ blake2b_simd.workspace = true
 num-traits.workspace = true
 logcall.workspace = true
 tracing-log.workspace = true
+regex.workspace = true
+der.workspace = true
+der-parser.workspace = true
+utf8-decode.workspace = true
+bech32.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
