fix(hermes-lib): SkipMap/List exhibit memory leak type behavior.  Eliminate SkipMap where possible.

--- a/hermes/crates/cardano-chain-follower/Cargo.toml
+++ b/hermes/crates/cardano-chain-follower/Cargo.toml
@@ -57,6 +57,7 @@ http.workspace = true
 crossbeam-channel.workspace = true
 hickory-resolver.workspace = true
 moka.workspace = true
+crossbeam-epoch.workspace = true
 
 [dev-dependencies]
 hex.workspace = true
