--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -143,6 +143,7 @@ humantime = "2.1.0"
 crossbeam-queue = "0.3.11"
 crossbeam-skiplist = "0.1.3"
 crossbeam-channel = "0.5.13"
+crossbeam-epoch = "0.9.18"
 strum = "0.26.3"
 strum_macros = "0.26.4"
 rayon = "1.10.0"
