fix(hermes-lib): Demonstrate syncing preprod with different bandwidth/memory usage tradeoffs.

--- a/hermes/Justfile
+++ b/hermes/Justfile
@@ -25,10 +25,20 @@ code_format:
     cargo +nightly fmtfix
 
 # Run long running developer test for mithril downloading.
-run-mithril-download-example: code_format
+run-mithril-download-example-preprod: code_format
     cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
     RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
     ./target/release/examples/follow_chains --preprod
+
+run-mithril-download-example-preprod-high-dl-bandwidth: code_format
+    cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
+    RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
+    ./target/release/examples/follow_chains --preprod --mithril-sync-workers 64 --mithril-sync-chunk-size 16 --mithril-sync-queue-ahead=6
+
+run-mithril-download-example-preprod-conservastive-dl-bandwidth: code_format
+    cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
+    RUST_LOG="error,follow_chains=debug,cardano_chain_follower=debug,mithril-client=debug" \
+    ./target/release/examples/follow_chains --preprod --mithril-sync-workers 8 --mithril-sync-chunk-size 1 --mithril-sync-queue-ahead=2
 
 run-mithril-download-example-preview: code_format
     cargo build -r --package cardano-chain-follower --example follow_chains --features mimalloc
