--- a/wasm/wasi-hermes-component-adapter/deny.toml
+++ b/wasm/wasi-hermes-component-adapter/deny.toml
@@ -18,7 +18,7 @@ targets = [
 version = 2
 ignore = [
     { id = "RUSTSEC-2020-0168", reason = "`mach` is used by wasmtime and we have no control over that." },
-    { id = "RUSTSEC-2021-0145", reason = "we don't target windows, and don;t use a custom global allocator." },
+    { id = "RUSTSEC-2021-0145", reason = "we don't target windows, and don't use a custom global allocator." },
 ]
 
 [bans]
@@ -49,7 +49,7 @@ unknown-git = "deny"
 
 # List of URLs for allowed Git repositories
 allow-git = [
-    "https://github.com/input-output-hk/hermes.git",
+    "https://github.com/input-output-hk/catalyst-libs.git",
     "https://github.com/input-output-hk/catalyst-pallas.git",
     "https://github.com/bytecodealliance/wasmtime",
     "https://github.com/aldanor/hdf5-rust",
