--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -26,10 +26,13 @@ ignore = [
 multiple-versions = "warn"
 wildcards = 'deny'
 deny = [
-    # { crate = "git2", use-instead = "gix" },
-    { crate = "openssl", use-instead = "rustls" },
-    { crate = "openssl-sys", use-instead = "rustls" },
+    # Scylla DB Drivers currently require OpenSSL.  Its unavoidable.
+    # However, there is movement to enable support for Rustls. 
+    # So, for now, allow open-ssl but it needs to be disabled as soon as Scylla DB enables Rustls.
+    #{ crate = "openssl", use-instead = "rustls" },
+    #{ crate = "openssl-sys", use-instead = "rustls" },
     "libssh2-sys",
+    # { crate = "git2", use-instead = "gix" },
     # { crate = "cmake", use-instead = "cc" },
     # { crate = "windows", reason = "bloated and unnecessary", use-instead = "ideally inline bindings, practically, windows-sys" },
 ]
