--- a/.github/workflows/semantic_pull_request.yml
+++ b/.github/workflows/semantic_pull_request.yml
@@ -12,3 +12,12 @@ jobs:
   build:
     name: Validate PR title
     uses: input-output-hk/catalyst-ci/.github/workflows/semantic_pull_request.yml@master
+    with:
+      requireScope: true
+      scopes: |
+        dashboard
+        hermes
+        docs
+        wasm
+        utils
+        general
