--- a/.vscode/settings.recommended.json
+++ b/.vscode/settings.recommended.json
@@ -34,16 +34,12 @@
   },
   "window.title": "${dirty}${activeEditorShort}",
   "conventionalCommits.scopes": [
-    "vscode",
-    "hermes",
     "dashboard",
-    "hermes-lib",
-    "mdlint",
-    "languages",
-    "spelling",
-    "issues",
-    "gateway",
-    "docs"
+    "hermes",
+    "docs",
+    "wasm",
+    "utils",
+    "general"
   ],
   "conventionalCommits.gitmoji": false,
   "markdown.extension.toc.unorderedList.marker": "*",
