chore(general): Update cat-ci version, and add basic Justfiles

--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -1,7 +1,7 @@
 {
     // markdownlint JSON(C) configuration for Catalyst Standards
     // Do not individually set markdown lint rules in documents.
-    // It is permissable to disable a rule in a document if it is a false positive.
+    // It is permissible to disable a rule in a document if it is a false positive.
     // Keep the scope of the lint disable to as small as possible.
     // See: https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md
     // Default state for all rules
