--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -26,63 +26,72 @@ path = "tests/wasm-integration/main.rs"
 harness = false
 
 [dependencies]
-cardano-chain-follower = { workspace = true }
-wasmtime = { workspace = true, features = ["component-model"] }
-rusty_ulid = { workspace = true }
-anyhow = { workspace = true }
-hex-literal = { workspace = true }
-thiserror = { workspace = true }
-criterion = { workspace = true, optional = true }
-libtest-mimic = { workspace = true }
-crossbeam-queue = { workspace = true }
-bip39 = { workspace = true, features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
-rand = { workspace = true }
-bip32 = { workspace = true }
-ed25519-bip32 = { workspace = true }
-dashmap = { workspace = true }
-once_cell = { workspace = true }
-clap = { workspace = true, features = ["derive", "env"] }
-tracing = { workspace = true, features = ["log"] }
-tracing-subscriber = { workspace = true, features = ["fmt", "json", "time"] }
-build-info = { workspace = true }
-derive_more = { workspace = true }
-chrono = { workspace = true, features = ["now"] }
-chrono-tz = { workspace = true }
-iana-time-zone = { workspace = true }
-tokio = { workspace = true, features = ["rt", "sync",  "time"] }
-pallas = { workspace = true }
-saffron = { workspace = true }
-libsqlite3-sys = { workspace = true, features = ["bundled"] }
-stringzilla = { workspace = true }
-hdf5 = { workspace = true }
-blosc-src = { workspace = true }
-num_cpus = { workspace = true }
-console = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
-hyper = { version = "0.14.10", features = ["full"] }
-dirs = { workspace = true }
+# specific commit from the `catalyst` branch
+pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
 
-jsonschema = { workspace = true }
-hex = { workspace = true }
-hmac = { workspace = true }
-pbkdf2 = { workspace = true }
-blake2b_simd = { workspace = true }
-sha2 = { workspace = true }
-ed25519-dalek = { workspace = true, features = ["pem"] }
-x509-cert = { workspace = true, features = ["pem"] }
-coset = { workspace = true }
-hermes-ipfs = { workspace = true }
+# HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
+hdf5 = { git="https://github.com/aldanor/hdf5-rust.git", rev="694e900972fbf5ffbdd1a2294f57a2cc3a91c994", version="0.8.1", features = [ "static", "blosc" ]}
+# needs to enable blosc compression functionality for hdf5 crate
+blosc-src = { version = "0.3.0", features = ["lz4", "zlib", "zstd"] }
+
+criterion = {version = "0.5.1", optional=true}
+
+cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
+hermes-ipfs = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "v0.0.3" }
+
+wasmtime = {version="20.0.2", features = ["component-model"] }
+rusty_ulid = "2.0.0"
+anyhow = "1.0.71"
+hex-literal = "0.4.1"
+thiserror = "1.0.56"
+hex = "0.4.3"
+tracing = {version="0.1.40", features = ["log"] }
+tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "time", "env-filter"] }
+libtest-mimic = "0.7.0"
+crossbeam-queue = "0.3.11"
+bip39 = { version="2.0.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
+iana-time-zone = "0.1.60"
+rand = "0.8.5"
+bip32 = "0.5.1"
+ed25519-bip32 = "0.4.1"
+dashmap = "6.0.1"
+once_cell = "1.19.0"
+clap = "4.5.3"
+build-info = "0.0.39"
+derive_more = "0.99.17"
+chrono = { version = "0.4.35", features = ["now"] }
+chrono-tz = "0.9.0"
+saffron = "0.1.0"
+tokio = "1.36.0"
+libsqlite3-sys = {version="0.30.1", features = ["bundled"] }
+stringzilla = "3.8.4"
 temp-dir = "0.1.13"
+num_cpus = "1.16.0"
+console = "0.15.8"
+serde = { version="1.0.210", features = ["derive"] }
+serde_json = "1.0"
+jsonschema = "0.18.0"
+hyper = { version = "0.14.10", features = ["full"] }
+hmac = "0.12.1"
+pbkdf2 = "0.12.2"
+blake2b_simd = "1.0.2"
+sha2 = "0.10"
+ed25519-dalek = { version="2.1.1", features = ["pem"] }
+x509-cert = { version="0.2.5", features = ["pem"] }
+coset = "0.3.7"
+rust-ipfs = "0.12.1"
+dirs = "5.0.1"
 regex = "1.10.5"
 
 [build-dependencies]
-build-info-build = { workspace = true }
+build-info-build = "0.0.39"
 
 [dev-dependencies]
-tracing-subscriber = { workspace = true }
-serial_test = { workspace = true }
-temp-dir = { workspace = true }
+serial_test = { version = "3.1.1", features = ["file_locks"] }
 
 [package.metadata.cargo-machete]
+# This is required for HDF5.
 ignored = ["blosc-src"]
+
+
+
