--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -30,9 +30,9 @@ harness = false
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
 
 # HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
-hdf5 = { git="https://github.com/aldanor/hdf5-rust.git", rev="694e900972fbf5ffbdd1a2294f57a2cc3a91c994", version="0.8.1", features = [ "static", "blosc" ]}
+hdf5 = { package = "hdf5-metno", version = "0.9.2", features = [ "static", "blosc" ] }
 # needs to enable blosc compression functionality for hdf5 crate
-blosc-src = { version = "0.3.0", features = ["lz4", "zlib", "zstd"] }
+blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
 
 criterion = {version = "0.5.1", optional=true}
 
@@ -41,47 +41,47 @@ hermes-ipfs = { version = "0.0.3", git = "https://github.com/input-output-hk/cat
 
 wasmtime = {version="20.0.2", features = ["component-model"] }
 rusty_ulid = "2.0.0"
-anyhow = "1.0.71"
+anyhow = "1.0.89"
 hex-literal = "0.4.1"
-thiserror = "1.0.56"
+thiserror = "1.0.64"
 hex = "0.4.3"
 tracing = {version="0.1.40", features = ["log"] }
 tracing-subscriber = { version = "0.3.18", features = ["fmt", "json", "time", "env-filter"] }
-libtest-mimic = "0.7.0"
+libtest-mimic = "0.8.1"
 crossbeam-queue = "0.3.11"
-bip39 = { version="2.0.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
-iana-time-zone = "0.1.60"
+bip39 = { version="2.1.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
+iana-time-zone = "0.1.61"
 rand = "0.8.5"
-bip32 = "0.5.1"
+bip32 = "0.5.2"
 ed25519-bip32 = "0.4.1"
-dashmap = "6.0.1"
-once_cell = "1.19.0"
-clap = "4.5.3"
+dashmap = "6.1.0"
+once_cell = "1.20.2"
+clap = "4.5.20"
 build-info = "0.0.39"
-derive_more = "0.99.17"
-chrono = { version = "0.4.35", features = ["now"] }
-chrono-tz = "0.9.0"
+derive_more = "1.0.0"
+chrono = { version = "0.4.38", features = ["now"] }
+chrono-tz = "0.10.0"
 saffron = "0.1.0"
-tokio = "1.36.0"
+tokio = "1.40.0"
 libsqlite3-sys = {version="0.30.1", features = ["bundled"] }
-stringzilla = "3.8.4"
-temp-dir = "0.1.13"
+stringzilla = "3.9.8"
+temp-dir = "0.1.14"
 num_cpus = "1.16.0"
 console = "0.15.8"
 serde = { version="1.0.210", features = ["derive"] }
-serde_json = "1.0"
-jsonschema = "0.18.0"
-hyper = { version = "0.14.10", features = ["full"] }
+serde_json = "1.0.128"
+jsonschema = "0.22.3"
+hyper = { version = "0.14.30", features = ["full"] }
 hmac = "0.12.1"
 pbkdf2 = "0.12.2"
 blake2b_simd = "1.0.2"
-sha2 = "0.10"
+sha2 = "0.10.8"
 ed25519-dalek = { version="2.1.1", features = ["pem"] }
 x509-cert = { version="0.2.5", features = ["pem"] }
-coset = "0.3.7"
+coset = "0.3.8"
 rust-ipfs = "0.12.1"
 dirs = "5.0.1"
-regex = "1.10.5"
+regex = "1.11.0"
 
 [build-dependencies]
 build-info-build = "0.0.39"
