--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -51,6 +51,7 @@ string_slice = "deny"
 unchecked_duration_subtraction = "deny"
 unreachable = "deny"
 missing_docs_in_private_items = "deny"
+arithmetic_side_effects = "deny"
 
 [workspace.dependencies]
 # specific commit from the `catalyst` branch
