--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,12 @@ name: CI
 
 on:
   push:
+    branches: [main]
+    tags: ["**"]
+  pull_request:
+    types:
+      - synchronize
+      - ready_for_review
 
 permissions:
   id-token: write
