--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -23,7 +23,9 @@
         "foxundermoon.shell-format",
         "dtsvet.vscode-wasm",
         "terrastruct.d2",
-        "tintinweb.graphviz-interactive-preview",
-        "fill-labs.dependi"
+        "fill-labs.dependi",
+        "nefrob.vscode-just-syntax",
+        "charliermarsh.ruff",        
+        "ms-python.python",
     ]
 }
