--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,26 +3,27 @@ name: CI
 on:
   push:
     branches: [main]
-    tags: ["**"]
   pull_request:
     types:
       - synchronize
       - ready_for_review
+      - opened
+    
 
 permissions:
   id-token: write
   contents: write
   packages: write
+  pull-requests: write
 
 jobs:
   ci:
-    uses: input-output-hk/catalyst-ci/.github/workflows/ci.yml@master
+    if: ${{ !github.event.pull_request.draft }}
+    uses: input-output-hk/catalyst-forge/.github/workflows/ci.yml@ci/v1.7.2
     with:
-      aws_ecr_registry: 332405224602.dkr.ecr.eu-central-1.amazonaws.com
-      aws_role_arn: arn:aws:iam::332405224602:role/ci
-      aws_region: eu-central-1
-    secrets:
-      dockerhub_token: ${{ secrets.DOCKERHUB_TOKEN }}
-      dockerhub_username: ${{ secrets.DOCKERHUB_USERNAME }}
-      earthly_runner_address: ${{ secrets.EARTHLY_SATELLITE_ADDRESS }}
-      earthly_runner_secret: ${{ secrets.EARTHLY_RUNNER_SECRET }}
+      forge_version: 0.8.0
+
+  test_reporting:
+    if: ${{ !github.event.pull_request.draft }}
+    needs: ci
+    uses: ./.github/workflows/generate-allure-report.yml
