--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -50,4 +50,5 @@ string_slice = "deny"
 unchecked_duration_subtraction = "deny"
 unreachable = "deny"
 missing_docs_in_private_items = "deny"
+arithmetic_side_effects = "deny"
 
