--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -94,14 +94,15 @@ expression = "Apache-2.0 WITH LLVM-exception"
 license-files = [{ path = "../../../LICENSE", hash = 0x001c7e6c }]
 
 [[licenses.clarify]]
-crate = "hdf5-src"
+crate = "hdf5-metno-src"
 expression = "MIT"
-license-files = [{ path = "../LICENSE-MIT", hash = 0x001c7e6c }]
+license-files = [{ path = "ext/hdf5/COPYING", hash = 0xf13e3591 }]
 
 [[licenses.clarify]]
 crate = "ring"
 expression = "MIT"
 license-files = [{ path = "LICENSE", hash = 0xbd0eed23 }]
+
 
 # SPDX considers OpenSSL to encompass both the OpenSSL and SSLeay licenses
 # https://spdx.org/licenses/OpenSSL.html
