--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -62,7 +62,7 @@ derive_more = "1.0.0"
 chrono = { version = "0.4.38", features = ["now"] }
 chrono-tz = "0.10.0"
 saffron = "0.1.0"
-tokio = "1.40.0"
+tokio = { version = "1.37.0", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
 libsqlite3-sys = {version="0.30.1", features = ["bundled"] }
 stringzilla = "3.9.8"
 temp-dir = "0.1.14"
