--- a/wasm/wasi-hermes-component-adapter/deny.toml
+++ b/wasm/wasi-hermes-component-adapter/deny.toml
@@ -16,11 +16,7 @@ targets = [
 
 [advisories]
 version = 2
-ignore = [
-    { id = "RUSTSEC-2020-0168", reason = "`mach` is used by wasmtime and we have no control over that." },
-    { id = "RUSTSEC-2021-0145", reason = "we don't target windows, and don't use a custom global allocator." },
-    { id = "RUSTSEC-2024-0370", reason = "`proc-macro-error` is used by crates we rely on, we can't control what they use."},
-]
+ignore = []
 
 [bans]
 multiple-versions = "warn"
@@ -58,6 +54,10 @@ allow-git = [
     "https://github.com/input-output-hk/catalyst-mithril.git",
     "https://github.com/bytecodealliance/wasmtime",
     "https://github.com/aldanor/hdf5-rust",
+    "https://github.com/txpipe/vrf",
+    "https://github.com/txpipe/kes",
+    "https://github.com/txpipe/curve25519-dalek",
+    "https://github.com/input-output-hk/mithril",
 ]
 
 [licenses]
@@ -79,6 +79,8 @@ allow = [
     "Unicode-3.0",
     "MPL-2.0",
     "Zlib",
+    "MIT-0",
+    "CDLA-Permissive-2.0",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
@@ -92,14 +94,15 @@ expression = "Apache-2.0 WITH LLVM-exception"
 license-files = [{ path = "../../../LICENSE", hash = 0x001c7e6c }]
 
 [[licenses.clarify]]
-crate = "hdf5-src"
+crate = "hdf5-metno-src"
 expression = "MIT"
-license-files = [{ path = "../LICENSE-MIT", hash = 0x001c7e6c }]
+license-files = [{ path = "ext/hdf5/COPYING", hash = 0xf13e3591 }]
 
 [[licenses.clarify]]
 crate = "ring"
 expression = "MIT"
 license-files = [{ path = "LICENSE", hash = 0xbd0eed23 }]
+
 
 # SPDX considers OpenSSL to encompass both the OpenSSL and SSLeay licenses
 # https://spdx.org/licenses/OpenSSL.html
