--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -30,7 +30,7 @@ harness = false
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
 
 # HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
-hdf5 = { package = "hdf5-metno", version = "0.9.2", features = [ "static", "blosc" ] }
+hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blosc", "blosc-zstd" ] }
 # needs to enable blosc compression functionality for hdf5 crate
 blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
 
