--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -71,7 +71,9 @@ console = "0.15.8"
 serde = { version="1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 jsonschema = "0.30.0"
-hyper = { version = "0.14.30", features = ["full"] }
+hyper = { version = "1.6.0", features = ["full"] }
+http-body-util = "0.1.3"
+hyper-util = { version = "0.1.13", features = ["server-auto"] }
 hmac = "0.12.1"
 pbkdf2 = "0.12.2"
 blake2b_simd = "1.0.2"
