--- a/wasm/wasi-hermes-component-adapter/Cargo.toml
+++ b/wasm/wasi-hermes-component-adapter/Cargo.toml
@@ -56,7 +56,7 @@ wit-bindgen = { version = "0.19.2", default-features = false } # Anything after 
 wasi = { version = "=0.11.0", default-features = false } # Needs to be 0.11 or it fails to build. Do not bump version.
 byte-array-literals = { git = "https://github.com/bytecodealliance/wasmtime", tag = "v20.0.1", version = "20.0.1" }
 wasm-encoder = "=0.207.0"
-object = { version = "=0.35.0", default-features = false }
+object = { version = "0.37.0", default-features = false }
 
 [package]
 name = "wasi-hermes-component-adapter"
