--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -39,7 +39,7 @@ criterion = {version = "0.6.0", optional=true}
 cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
 hermes-ipfs = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "v0.0.3" }
 
-wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
+wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
 rusty_ulid = "2.0.0"
 anyhow = "1.0.89"
 hex-literal = "1.0.0"
@@ -90,6 +90,8 @@ build-info-build = "0.0.40"
 
 [dev-dependencies]
 serial_test = { version = "3.1.1", features = ["file_locks"] }
+# An override with the "wat" feature added.
+wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
 
 [package.metadata.cargo-machete]
 # This is required for HDF5.
