--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -36,7 +36,8 @@ blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
 
 criterion = {version = "0.6.0", optional=true}
 
-cardano-blockchain-types = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "r20250619-00" }
+cardano-blockchain-types = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "r20250627-00" }
+cardano-chain-follower = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "r20250627-00" }
 hermes-ipfs = { version = "0.0.3", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "v0.0.3" }
 
 wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
@@ -96,6 +97,3 @@ wasmtime = { version = "33.0.0", default-features = false, features = ["runtime"
 [package.metadata.cargo-machete]
 # This is required for HDF5.
 ignored = ["blosc-src"]
-
-
-
