--- a/wasm/wasi/wit/deps.toml
+++ b/wasm/wasi/wit/deps.toml
@@ -1,6 +1,6 @@
-clocks = "https://github.com/WebAssembly/wasi-clocks/archive/main.tar.gz"
-io = "https://github.com/WebAssembly/wasi-io/archive/main.tar.gz"
-http = "https://github.com/WebAssembly/wasi-http/archive/main.tar.gz"
-random = "https://github.com/WebAssembly/wasi-random/archive/main.tar.gz"
-filesystem = "https://github.com/WebAssembly/wasi-filesystem/archive/main.tar.gz"
-cli = "https://github.com/WebAssembly/wasi-cli/archive/main.tar.gz"
+clocks = "https://github.com/WebAssembly/wasi-clocks/archive/v0.2.6.tar.gz"
+io = "https://github.com/WebAssembly/wasi-io/archive/v0.2.6.tar.gz"
+http = "https://github.com/WebAssembly/wasi-http/archive/v0.2.6.tar.gz"
+random = "https://github.com/WebAssembly/wasi-random/archive/v0.2.6.tar.gz"
+filesystem = "https://github.com/WebAssembly/wasi-filesystem/archive/v0.2.6.tar.gz"
+cli = "https://github.com/WebAssembly/wasi-cli/archive/v0.2.6.tar.gz"
