--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -88,6 +88,7 @@ reqwest = "0.12.22"
 rustls = "0.23.28"
 webpki-roots = "1.0.1"
 webpki = "0.22.4"
+tokio-rustls = "0.26.2"
 
 [build-dependencies]
 build-info-build = "0.0.40"
