--- a/wasm/integration-test/cardano/Cargo.toml
+++ b/wasm/integration-test/cardano/Cargo.toml
@@ -10,3 +10,9 @@ crate-type = ["cdylib"]
 hex = "0.4.3"
 pallas-traverse = "0.25.0"
 wit-bindgen = "0.43.0"
+
+[profile.release]
+# Significantly reduces WASM size.
+lto = true
+# Further reduces WASM size.
+opt-level = "z"
