--- a/wasm/wasi/wit/deps.toml
+++ b/wasm/wasi/wit/deps.toml
@@ -4,3 +4,4 @@ http = "https://github.com/WebAssembly/wasi-http/archive/v0.2.6.tar.gz"
 random = "https://github.com/WebAssembly/wasi-random/archive/v0.2.6.tar.gz"
 filesystem = "https://github.com/WebAssembly/wasi-filesystem/archive/v0.2.6.tar.gz"
 cli = "https://github.com/WebAssembly/wasi-cli/archive/v0.2.6.tar.gz"
+sockets = "https://github.com/WebAssembly/wasi-sockets/archive/v0.2.6.tar.gz"
