--- a/wasm/integration-test/http_reply/Cargo.toml
+++ b/wasm/integration-test/http_reply/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-wit-bindgen = "0.24.0"
+wit-bindgen = "0.43.0"
+
+[profile.release]
+# Significantly reduces WASM size.
+lto = true
+# Further reduces WASM size.
+opt-level = "z"
