Spin-up a simple http server

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ $RECYCLE.BIN/
 # Specifically exclude it in the directory it appears, if its required.
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
+
+# Locally tested components
+wasm/test-components
