--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -25,6 +25,11 @@ name = "wasm-component-integration-tests"
 path = "tests/wasm-integration/main.rs"
 harness = false
 
+[[test]]
+name = "application-integration-tests"
+path = "tests/app-integration/main.rs"
+harness = false
+
 [dependencies]
 # specific commit from the `catalyst` branch
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
