--- a/hermes/bin/tests/integration/components/http_request_rte_01/Cargo.toml
+++ b/hermes/bin/tests/integration/components/http_request_rte_01/Cargo.toml
@@ -11,5 +11,6 @@ wit-bindgen = "0.43.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.0"
 fastrand = "2.3.0"
+url = "2.5.4"
 
 [workspace]
