--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 members = [
     "bin",
     "crates/cardano-chain-follower",
+    "bin/tests/integration/components/http_request_rte_01"
 ]
 
 [workspace.package]
