--- a/hermes/bin/tests/integration/components/http_request_rte_01/Cargo.toml
+++ b/hermes/bin/tests/integration/components/http_request_rte_01/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "test_component"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
 
 [lib]
 crate-type = ["cdylib"]
@@ -11,4 +11,5 @@ wit-bindgen = "0.43.0"
 serde_json = "1.0.0"
 url = "2.5.4"
 
-[workspace]
+[lints]
+workspace = true
