--- a/hermes/Cargo.toml
+++ b/hermes/Cargo.toml
@@ -5,6 +5,10 @@ members = [
     "crates/cardano-chain-follower",
     "bin/tests/integration/components/http_request_rte_01"
 ]
+default-members = [
+    "bin",
+    "crates/cardano-chain-follower"
+]
 
 [workspace.package]
 edition = "2021"
