--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -38,6 +38,9 @@ hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blo
 # needs to enable blosc compression functionality for hdf5 crate
 blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
 
+# fixes the dependency of libp2p of hermes-ipfs, because latest version uses MSRV higher than ours.
+yamux = "=0.13.3"
+
 criterion = {version = "0.6.0", optional=true}
 
 cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
@@ -92,10 +95,6 @@ webpki-roots = "1.0.1"
 tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
 usvg = "0.45.1"
 
-# Fixing the dependency of libp2p of hermes-ipfs.
-# Latest version uses MSRV higher than ours.
-yamux = "=0.13.3"
-
 [build-dependencies]
 build-info-build = "0.0.40"
 
@@ -106,7 +105,7 @@ wasmtime = { version = "33.0.0", default-features = false, features = ["runtime"
 
 [package.metadata.cargo-machete]
 # This is required for HDF5.
-ignored = ["blosc-src"]
+ignored = ["blosc-src", "yamux"]
 
 
 
