refactor: simplify reqwest imports and update hostname
- Remove reqwest:: prefixes with direct imports
- Fix hostname: app.dev.projectcatalyst.io → app.dev.project.catalyst.io
- Pin yamux=0.13.3 for MSRV compatibility

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -104,7 +104,7 @@ wasmtime = { version = "33.0.0", default-features = false, features = ["runtime"
 
 [package.metadata.cargo-machete]
 # This is required for HDF5.
-ignored = ["blosc-src"]
+ignored = ["blosc-src", "yamux"]
 
 
 
