--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -34,6 +34,9 @@ hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blo
 # needs to enable blosc compression functionality for hdf5 crate
 blosc-src = { version = "0.3.4", features = ["lz4", "zlib", "zstd"] }
 
+# fixes the dependency of libp2p of hermes-ipfs, because latest version uses MSRV higher than ours.
+yamux = "=0.13.3"
+
 criterion = {version = "0.6.0", optional=true}
 
 cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
@@ -97,8 +100,5 @@ serial_test = { version = "3.1.1", features = ["file_locks"] }
 wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
 
 [package.metadata.cargo-machete]
-# This is required for HDF5.
-ignored = ["blosc-src"]
-
-
-
+# This is required for HDF5 and hermes-ipfs.
+ignored = ["blosc-src", "yamux"]
