--- a/wasm/integration-test/ipfs/Cargo.toml
+++ b/wasm/integration-test/ipfs/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wit-bindgen = "0.43.0"
-hermes = { path = "../../../hermes", default-features = false, features = ["guest"] }
+hermes = { path = "../../../hermes/bin", default-features = false, features = ["guest"] }
 
 [profile.release]
 # Significantly reduces WASM size.
