--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -90,6 +90,8 @@ rustls = { version = "0.23.28", default-features = false, features = ["ring"] }
 webpki-roots = "1.0.1"
 tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
 usvg = "0.45.1"
+reqwest = "0.12.22"
+url = "2.5.0"
 
 [build-dependencies]
 build-info-build = "0.0.40"
