feat(hermes): Machinery for integration testing on the app-level (+one, simple test as an example) (#454)
* Scaffolding for the new integration test framework

* Build component

* Packaging module

* Running an app

* Add note

* Cleanup

* Adjust timings

* Assert logs via file

* Remove hardcoded paths

* Clean-up debug messages

* Clean-up packaging code

* Propagate errors of Hermes execution to OS so integration tests can detect issues

* Remove debug prints

* Setting the settings

* Setting the settings

* Packaging http server configuration data into the app

* Connect to the http server from config

* Clean-up

* Revert temporary changes

* Clean-up unused

* Clean-up unused

* Update assertion

* Rename `HelloWorldModule` -> `HttpRequestApp`

* Fix formatting

* Fix machete

* Fix vendoring issues

* Fix licensing issue

* Satisfy Clippy

* Fixes for CI

* Add todo

* Mention a couple of test cases for http extension

* Fix component build output path

* Quit app with code 0 upon success

* Do not forcefully kill the app, wait for it to quit gracefully

* Fix spelling

* Update to be consistent with http-gateway api

--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -25,6 +25,10 @@ name = "wasm-component-integration-tests"
 path = "tests/wasm-integration/main.rs"
 harness = false
 
+[[test]]
+name = "integration"
+path = "tests/integration/tests/mod.rs"
+
 [dependencies]
 # specific commit from the `catalyst` branch
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
@@ -90,6 +94,7 @@ rustls = { version = "0.23.28", default-features = false, features = ["ring"] }
 webpki-roots = "1.0.1"
 tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
 usvg = "0.45.1"
+uuid = { version = "1.17.0", features = ["v4"] }
 reqwest = "0.12.22"
 url = "2.5.0"
 
@@ -100,6 +105,7 @@ build-info-build = "0.0.40"
 serial_test = { version = "3.1.1", features = ["file_locks"] }
 # An override with the "wat" feature added.
 wasmtime = { version = "33.0.0", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
+httpmock = "0.7.0"
 
 [package.metadata.cargo-machete]
 # This is required for HDF5 and hermes-ipfs.
