--- a/hermes/deny.toml
+++ b/hermes/deny.toml
@@ -83,6 +83,7 @@ allow = [
     "Zlib",
     "MIT-0",
     "CDLA-Permissive-2.0",
+    "OpenSSL",
 ]
 exceptions = [
     #{ allow = ["Zlib"], crate = "tinyvec" },
