--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -3,7 +3,7 @@ name = "hermes"
 description = "The Hermes Node"
 keywords = ["cardano", "catalyst", "hermes"]
 categories = ["command-line-utilities"]
-version.workspace = true
+version = "0.0.5"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -34,19 +34,16 @@ path = "tests/integration/tests/mod.rs"
 # Point to latest pallas when we eliminate the dependency on the old chain follower.
 pallas = { git = "https://github.com/input-output-hk/catalyst-pallas.git", rev = "709acb19c52c6b789279ecc4bc8793b5d8b5abe9", version = "0.25.0" }
 
+# Our custom crates
+hermes-ipfs = { version = "0.0.5", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "hermes-ipfs/v0.0.5" }
+cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
+
 # HDF5 is consumed using a git tag, because the latest release is very old, but the code is much more advanced.
 hdf5 = { package = "hdf5-metno", version = "0.10.1", features = [ "static", "blosc", "blosc-zstd" ] }
 # needs to enable blosc compression functionality for hdf5 crate
 blosc-src = { version = "0.3.6", features = ["lz4", "zlib", "zstd"] }
 
-# fixes the dependency of libp2p of hermes-ipfs, because latest version uses MSRV higher than ours.
-#yamux = "=0.13.5"
-
 criterion = {version = "0.7.0", optional=true}
-
-cardano-chain-follower = { path = "../crates/cardano-chain-follower", version = "0.0.1" }
-hermes-ipfs = { version = "0.0.5", git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "hermes-ipfs/v0.0.5" }
-
 wasmtime = { version = "35.0.0", default-features = false, features = ["runtime", "cranelift", "component-model"] }
 rusty_ulid = "2.0.0"
 anyhow = "1.0.98"
@@ -57,7 +54,7 @@ tracing = {version="0.1.41", features = ["log"] }
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "time", "env-filter"] }
 libtest-mimic = "0.8.1"
 crossbeam-queue = "0.3.12"
-bip39 = { version="2.1.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
+bip39 = { version="2.2.0", features = ["chinese-simplified", "chinese-traditional", "czech", "french", "italian", "japanese", "korean", "spanish" ] }
 iana-time-zone = "0.1.63"
 rand = "0.9.2"
 bip32 = "0.5.3"
@@ -70,8 +67,8 @@ derive_more = "2.0.1"
 chrono = { version = "0.4.41", features = ["now"] }
 chrono-tz = "0.10.4"
 saffron = "0.1.0"
-tokio = { version = "1.45.1", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
-libsqlite3-sys = {version="0.34.0", features = ["bundled"] }
+tokio = { version = "1.47.0", features = ["macros", "sync", "rt-multi-thread", "rt", "net"] }
+libsqlite3-sys = {version="0.35.0", features = ["bundled"] }
 stringzilla = "3.12.5"
 temp-dir = "0.1.16"
 num_cpus = "1.17.0"
@@ -81,7 +78,7 @@ serde_json = "1.0.141"
 jsonschema = "0.32.0"
 hyper = { version = "1.6.0", features = ["full"] }
 http-body-util = "0.1.3"
-hyper-util = { version = "0.1.13", features = ["server-auto"] }
+hyper-util = { version = "0.1.16", features = ["server-auto"] }
 hmac = "0.12.1"
 pbkdf2 = "0.12.2"
 blake2b_simd = "1.0.3"
