improve http-proxy logging and add documentation
- Fix logging API parameter order causing compilation errors
- Enhance log messages with better context and appropriate levels
- Add concise documentation explaining this is a toy example
- Document key patterns for building production HTTP services

--- a/hermes/apps/justfile
+++ b/hermes/apps/justfile
@@ -46,6 +46,8 @@ run-athena:
     set -euo pipefail
     
     echo "🚀 Running Athena application..."
+    export REDIRECT_ALLOWED_PATH_PREFIXES="${REDIRECT_ALLOWED_PATH_PREFIXES:-/fact}"
+    export REDIRECT_ALLOWED_HOSTS="${REDIRECT_ALLOWED_HOSTS:-catfact.ninja}"
     ../target/release/hermes run --untrusted athena/app.happ
 
 # Build everything and run Athena
