Add an empty DB component to athena

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ Cargo.lock
 *.wasm
 *.happ
 
+# Hermes build stuff
+hermes/apps/athena/modules/hermes
+hermes/apps/athena/modules/**/Cargo.lock
+target/*
