Writing first data to DB

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ Cargo.lock
 hermes/apps/athena/modules/hermes
 hermes/apps/athena/modules/**/Cargo.lock
 target/*
+
+# Hermes datastore files
+hermes_datastore.db*
