--- a/hermes/apps/athena/modules/rbac-registration/Cargo.toml
+++ b/hermes/apps/athena/modules/rbac-registration/Cargo.toml
@@ -8,6 +8,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wit-bindgen = "0.43.0"
-cardano-blockchain-types = { git = "https://github.com/input-output-hk/catalyst-libs", branch = "wasm/cardano-bc-types" }
-rbac-registration = { git = "https://github.com/input-output-hk/catalyst-libs", branch = "wasm/rbac-reg" }
+anyhow = "1.0.98"
+serde_json = "1.0.142"
 
+cardano-blockchain-types = { version = "0.0.6", git = "https://github.com/input-output-hk/catalyst-libs", tag = "cardano-blockchain-types/v0.0.6" }
+rbac-registration = { version = "0.0.8", git = "https://github.com/input-output-hk/catalyst-libs", tag = "rbac-registration/v0.0.8" }
+catalyst-types = { version = "0.0.6",  git = "https://github.com/input-output-hk/catalyst-libs.git", tag = "catalyst-types/v0.0.6" }
