fix(hermes): replace custom thread pool with wrapped thread pool from rayon, fix test to write into file sections instead of append cause of sync issues

--- a/hermes/.config/nextest.toml
+++ b/hermes/.config/nextest.toml
@@ -52,9 +52,9 @@ store-failure-output = true
 serial-integration = { max-threads = 1 }
 
 [[profile.default.overrides]]
-filter = 'test(/^tests::/)'
+filter = 'test(/^serial::/)'
 test-group = 'serial-integration'
 
 [[profile.ci.overrides]]
-filter = 'test(/^tests::/)'
+filter = 'test(/^serial::/)'
 test-group = "serial-integration"
