feat(hermes): progressive migration proxy (#494)
* feat: add HTTP proxy component for temporary endpoint mirroring

* feat: add document API v2 endpoint and enhance proxy documentation

- Add /api/gateway/v2/document/index endpoint mirroring
- Enhance documentation with comprehensive testing examples
- Update testing section to match test_parity.sh patterns
- Distill documentation while maintaining technical accuracy

* refactor: replace string matching with regex patterns in HTTP proxy

Replace verbose string constants and manual path matching with regex patterns for cleaner, more maintainable routing logic. Patterns are compiled once at startup for performance.

* docs(http-proxy): add missing v1 document endpoint to mirrored endpoints list

The documentation was missing  from the currently
mirrored endpoints section, though it exists in the code implementation.

* refactor: evolve HTTP proxy from mirror to configurable router

- Rename mirror terminology to external routing for clarity
- Update documentation to reflect long-term vision of configurable proxy
- Add TODOs for future configuration system features
- Expand route patterns to handle subpaths and parameters
- Improve code organization and maintainability

* ci dict

* ci fmt

* ci

* Update hermes/apps/athena/modules/http-proxy/Cargo.toml

Co-authored-by: Rafał Chabowski <rafal.chabowski@iohk.io>

* Refactor HTTP proxy routing with RegexSet and update CI to v3.5.11

- Replace individual regex compilation with unified RegexSet for better performance
- Introduce RouteAction enum for cleaner routing logic
- Remove duplicate static regex declarations causing compile errors
- Update catalyst-ci version from v3.5.10 to v3.5.11 across all Earthfiles
- Clean up dictionary and improve code formatting

---------

Co-authored-by: Steven Johnson <stevenj@users.noreply.github.com>
Co-authored-by: Rafał Chabowski <rafal.chabowski@iohk.io>

--- a/hermes/apps/athena/modules/http-proxy/Cargo.toml
+++ b/hermes/apps/athena/modules/http-proxy/Cargo.toml
@@ -9,4 +9,5 @@ crate-type = ["cdylib"]
 [dependencies]
 wit-bindgen = "0.43.0"
 serde = { version = "1.0", features = ["derive"] }
-tracing = "*"
+tracing = "0.1.41"
+regex = "1.10"
