fix(general): typo

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @stevenj @cong-or @rafal-ch @no30bit @bkioshm @aido-mth
+* @stevenj @cong-or @rafal-ch @no30bit @bkioshn @aido-mth
 
 /dashboard/ @minikin @stevenj
 
