feat(hermes): Initialize module via direct function call, not an event (#528)
* Call init instead of emitting an init event

* Remove `InitEvent`

* Fix `ApplicationName`

* Revert `Vfs` visibiliy

* Update docs

* Report failed module in logs

* Clean-up app initialization

* Improve error handling

* Fix module initialization

* Fix component build in the integration tests

* Add integration test for failed module initialization

* Fix formatting

* Satisfy Lints

* Add TODO

* Update hermes/bin/src/cli/run.rs

Co-authored-by: Vladislav Borbut <vladislav.borbut@iohk.io>

* Add missing import

* Temporarily disable `parallel_execution` test

---------

Co-authored-by: Vladislav Borbut <vladislav.borbut@iohk.io>

--- a/hermes/bin/tests/integration/components/failed_init/Cargo.toml
+++ b/hermes/bin/tests/integration/components/failed_init/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "http_request_rte_01"
+name = "failed_init"
 version = "0.1.0"
 edition.workspace = true
 license.workspace = true
@@ -9,8 +9,6 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wit-bindgen = "0.43.0"
-serde_json = "1.0.0"
-url = "2.5.4"
 
 [lints]
 workspace = true
