--- a/wasm/integration-test/wasi-filesystem/Cargo.toml
+++ b/wasm/integration-test/wasi-filesystem/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
+# The name of the built .wasm file.
+# Keep it consistent with Earthly build output name.
+name = "wasi_filesystem"
 crate-type = ["cdylib"]
 
 [dependencies]
