--- a/hermes/bin/Cargo.toml
+++ b/hermes/bin/Cargo.toml
@@ -95,6 +95,7 @@ uuid = { version = "1.18.0", features = ["v4"] }
 reqwest = "0.12.23"
 url = "2.5.7"
 num-traits = "0.2.19"
+paste = "1.0.15"
 traitreg = "0.3.0"
 orx-concurrent-vec = "3.7.0"
 keyed-lock = "0.2.3"
@@ -104,8 +105,8 @@ build-info-build = "0.0.41"
 
 [dev-dependencies]
 serial_test = { version = "3.2.0", features = ["file_locks"] }
-# An override with the "wat" feature added.
-wasmtime = { version = "36.0.2", default-features = false, features = ["runtime", "cranelift", "component-model", "wat"] }
+# An override with the "wat" and "addr2line" features added (debug purposes).
+wasmtime = { version = "36.0.2", default-features = false, features = ["runtime", "cranelift", "component-model", "wat", "addr2line"] }
 httpmock = "0.7.0"
 
 [package.metadata.cargo-machete]
